--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "alfred-battery",
 	"version": "1.0.3",
-	"description": "Alfred 3 workflow to get battery info",
+	"description": "Alfred workflow to get battery info",
 	"license": "MIT",
 	"repository": "alonalon/alfred-battery",
 	"author": {
@@ -10,7 +10,7 @@
 		"url": "aronhafner.com"
 	},
 	"engines": {
-		"node": ">=4"
+		"node": ">=6"
 	},
 	"scripts": {
 		"test": "xo && ava",
@@ -31,7 +31,7 @@
 		"battery level"
 	],
 	"dependencies": {
-		"alfy": "^0.6.0",
+		"alfy": "^0.9.1",
 		"osx-battery": "^4.0.0",
 		"to-percent": "^1.0.2"
 	},
